package arena.engine.qte;

public interface QtePolicy {
    QteResult resolveAttackQte();
}
