@startuml uml_engine
title Engine Module (arena.engine)

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam class {
    BackgroundColor White
    BorderColor Black
}
skinparam package {
    BackgroundColor #F3E5F5
    BorderColor #6A1B9A
}
skinparam note {
    BackgroundColor #FFFDE7
    BorderColor #F9A825
}

hide empty members

' ── Core ────────────────────────────────────────
package "arena.engine" {

    class GameState <<Static>> {
        - {static} currentRound : int
        - {static} players : List<Player>
        - {static} enemies : List<List<Combatant>>
        - {static} turnOrder : List<Combatant>
        - {static} combatLog : Deque<String>
        ..
        + {static} resetState() : void
        + {static} getPlayer() : Player
        + {static} getCurrentWave() : List<Combatant>
        + {static} getTurnOrder() : List<Combatant>
        + {static} checkEndCondition() : int
        + {static} newTurnOrder() : void
        + {static} advanceWaveIfCleared() : boolean
        + {static} addLog(msg) : void
    }

    class BattleEngine {
        - playerAction : PlayerAction
        - aiTurnController : AiTurnController
        - pendingTurnFrames : List<TurnFrame>
        ..
        + executePlayerTurn(choice, target, item) : int
        + executePlayerTurn(choice, target, item, multiplier) : int
        + sweepDeadEnemies() : void
        + drainTurnFrames() : List<TurnFrame>
        + endRound() : void
    }

    class "BattleEngine.TurnFrame" as TurnFrame {
        - message : String
        - playerDamage : Integer
        - enemyDamages : List<Integer>
        - snapshotPlayerHp : int
        - snapshotEnemyHps : Map<Combatant, Integer>
        ..
        + getMessage() : String
        + getPlayerDamage() : Integer
        + getEnemyDamages() : List<Integer>
    }

    class PlayerAction {
        + bAttack(player, target) : void
        + defend(player) : void
        + specialSkill(player, target, enemies) : void
        + consumeItem(player, target, enemies, item) : void
    }

    class GameInit {
        + initPlayers(choice, name) : Player
        + chooseItems(player, choice) : void
        + initEnemies(difficulty) : List<List<Combatant>>
        + initCustomEnemies(opponentType) : List<List<Combatant>>
        + startGame() : void
    }
}

note as N_OVERLOAD #FFFDE7
  <b>Method Overloading — BattleEngine</b>
  executePlayerTurn() has two signatures:
  1. (choice, target, item)
     → delegates to version 2 with multiplier = 1.0
  2. (choice, target, item, multiplier)
     → full implementation; applies QTE damage scaling.
  This allows callers that don't use QTE to use the
  simpler signature without behavioural differences.
end note
BattleEngine .. N_OVERLOAD

' ── Controller ──────────────────────────────────
package "arena.engine.controller" {

    interface AiTurnController {
        + resolveTurn(aiPlayer, humanTarget) : AiTurnResult
    }

    class RandomAiTurnController {
        + resolveTurn(aiPlayer, humanTarget) : AiTurnResult
    }

    class AiTurnResult {
        - message : String
        - damageToPlayer : Integer
        ..
        + getMessage() : String
        + getDamageToPlayer() : Integer
    }
}

note as N_AI #FFFDE7
  <b>AiTurnController (Custom Duel Mode)</b>
  RandomAiTurnController randomly selects
  from: attack, defend, item, or special skill
  each turn, simulating an unpredictable opponent.
  AiTurnResult carries the log message and any
  damage dealt back to BattleEngine for rendering.
end note
RandomAiTurnController .. N_AI

' ── Mode ────────────────────────────────────────
package "arena.engine.mode" {

    interface GameMode {
        + id() : String
        + initializeEnemies(init, setup) : void
        + usesQte() : boolean
    }

    class StandardMode {
        - difficulty : int
        ..
        + id() : String
        + initializeEnemies(init, setup) : void
        + usesQte() : boolean
    }

    class CustomDuelMode {
        - qteEnabled : boolean
        ..
        + id() : String
        + initializeEnemies(init, setup) : void
        + usesQte() : boolean
    }

    class GameModeFactory <<Static>> {
        + {static} fromSetup(setup) : GameMode
    }
}

note as N_MODE #FFFDE7
  <b>GameMode — Strategy Pattern</b>
  GameModeFactory reads setup.difficulty and returns
  the correct GameMode implementation:
  • StandardMode → spawns wave-based enemies at
    Easy / Medium / Hard difficulty.
  • CustomDuelMode → spawns one opponent (Warrior,
    Wizard, Goblin, Wolf, or Random) chosen by
    the player; optionally enables QTE attacks.
end note
GameModeFactory .. N_MODE

' ── QTE ─────────────────────────────────────────
package "arena.engine.qte" {

    interface QtePolicy {
        + resolveAttackQte() : QteResult
    }

    class NoOpQtePolicy {
        + resolveAttackQte() : QteResult
    }

    class CustomModeQtePolicy {
        + resolveAttackQte() : QteResult
    }

    enum QteResult {
        EARLY   (0.5x)
        NORMAL  (1.0x)
        PERFECT (2.0x)
        ..
        + multiplier() : double
    }
}

note as N_QTE #FFFDE7
  <b>Polymorphism — QtePolicy</b>
  BattleEngine only calls resolveAttackQte() on a
  QtePolicy reference — it never checks which
  implementation is active at runtime.
  • NoOpQtePolicy silently returns NORMAL (1.0x),
    used in Standard mode with no UI interruption.
  • CustomModeQtePolicy shows a timing bar to the
    player; the result (EARLY / NORMAL / PERFECT)
    changes the damage multiplier passed to
    executePlayerTurn().
  Same call site, different behaviour — Polymorphism.
end note
QtePolicy .. N_QTE

' ── Relationships ────────────────────────────────
BattleEngine  -->  PlayerAction
BattleEngine  -->  GameState
BattleEngine  -->  AiTurnController
BattleEngine  *--  TurnFrame
GameInit      -->  GameState

AiTurnController       <|..  RandomAiTurnController
RandomAiTurnController -->   PlayerAction
RandomAiTurnController ..>   AiTurnResult : creates

GameMode        <|..  StandardMode
GameMode        <|..  CustomDuelMode
GameModeFactory ..>   GameMode : creates

QtePolicy       <|..  NoOpQtePolicy
QtePolicy       <|..  CustomModeQtePolicy
CustomModeQtePolicy ..>  QteResult
NoOpQtePolicy       ..>  QteResult

StandardMode   ..>  GameInit : calls initEnemies
CustomDuelMode ..>  GameInit : calls initCustomEnemies

@enduml
